--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
 <!--==========================Header Ends======================================-->
 
-<!--==============================Navigatin starts=============================-->
-
+<!--Navigatin starts=============================-->
 	<div class="navigation">
 		<ul>
 			<li><a class="active" href="index.html">HOME</a></li>
@@ -32,6 +31,7 @@
 			<li class="bdr"><a class="pdg" href="contact.html">CONTACT</a></li>					
 		</ul>
 	</div>
+
 <!--==============================Navigatin Ends=============================-->
 
 <!--==============================Slider Starts==============================-->
@@ -55,7 +55,14 @@
 
 <!--==============================Footer Ends==============================-->
 </div>
-
+	<div class="navigation">
+		<ul>
+			<li><a class="active" href="index.html">HOME</a></li>
+			<li><a href="about.html">ABOUT</a></li>
+			<li><a href="picture.html">PICTURES</a></li>
+			<li class="bdr"><a class="pdg" href="contact.html">CONTACT</a></li>					
+		</ul>
+	</div>
 
 
 <!--==========================Scripts Starts=============================-->
