enough with this navigation bars

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 <!--==========================Header Ends======================================-->
 
-<!--Navigatin starts=============================-->
+<!--==============================Navigatin starts=============================-->
+
 	<div class="navigation">
 		<ul>
 			<li><a class="active" href="index.html">HOME</a></li>
@@ -31,7 +32,6 @@
 			<li class="bdr"><a class="pdg" href="contact.html">CONTACT</a></li>					
 		</ul>
 	</div>
-
 <!--==============================Navigatin Ends=============================-->
 
 <!--==============================Slider Starts==============================-->
@@ -55,14 +55,7 @@
 
 <!--==============================Footer Ends==============================-->
 </div>
-	<div class="navigation">
-		<ul>
-			<li><a class="active" href="index.html">HOME</a></li>
-			<li><a href="about.html">ABOUT</a></li>
-			<li><a href="picture.html">PICTURES</a></li>
-			<li class="bdr"><a class="pdg" href="contact.html">CONTACT</a></li>					
-		</ul>
-	</div>
+
 
 
 <!--==========================Scripts Starts=============================-->
@@ -77,21 +70,6 @@
 		});	
 	</script>
 <!--==========================Scripts Ends=============================-->
-	<div class="navigation">
-		<ul>
-			<li><a class="active" href="index.html">HOME</a></li>
-			<li><a href="about.html">ABOUT</a></li>
-			<li><a href="picture.html">PICTURES</a></li>
-			<li class="bdr"><a class="pdg" href="contact.html">CONTACT</a></li>					
-		</ul>
-	</div>
-		<div class="navigation">
-		<ul>
-			<li><a class="active" href="index.html">HOME</a></li>
-			<li><a href="about.html">ABOUT</a></li>
-			<li><a href="picture.html">PICTURES</a></li>
-			<li class="bdr"><a class="pdg" href="contact.html">CONTACT</a></li>					
-		</ul>
-	</div>
+
 </body>
 </html>
